@@ -52,9 +52,13 @@ class RecordAirportDuplicateTest extends WebTestCase {
 
     login($this);
     $params = $airport;
-    $params["action"] = "RECORD";
+    $params += array("action" => "RECORD", "unittest" => "true");
     $msg = $this->post($webroot . "php/apsearch.php", $params);
-    $this->assertText('0;');
+
+    $this->assertText('From: support@openflights.org');
+    $this->assertText('Reply-To: test@openflights.example');
+    $this->assertText('New edit submitted by autotest:');
+    $this->assertText("INSERT INTO airports(name,city,country,iata,icao,x,y,elevation,timezone,dst,uid) VALUES('AutoTest Airpor");
   }
 }
 
@@ -67,9 +71,15 @@ class EditWrongAirportTest extends WebTestCase {
     $params = $airport;
     $params["apid"] = 1;
     $params["icao"] = "ZZZY";
-    $params += array("action" => "RECORD");
+    $params += array("action" => "RECORD", "unittest" => "true");
     $msg = $this->post($webroot . "php/apsearch.php", $params);
-    $this->assertText('0;');
+
+    $this->assertText('From: support@openflights.org');
+    $this->assertText('Reply-To: test@openflights.example');
+    $this->assertText('New edit submitted by autotest:');
+    $this->assertText("UPDATE airports SET ");
+    $this->assertText("icao='ZZZY'");
+    $this->assertText("[icao] => " . $airports["icao"]);
   }
 }
 
@@ -82,9 +92,13 @@ class EditAirportDuplicateICAOTest extends WebTestCase {
     $params = $airport;
     $params["icao"] = "WSSS"; // existing airport (Singapore)
     $params["apid"] = $new_apid;
-    $params += array("action" => "RECORD");
+    $params += array("action" => "RECORD", "unittest" => "true");
     $msg = $this->post($webroot . "php/apsearch.php", $params);
-    $this->assertText('0;');
+    $this->assertText('From: support@openflights.org');
+    $this->assertText('Reply-To: test@openflights.example');
+    $this->assertText('New edit submitted by autotest:');
+    $this->assertText("UPDATE airports SET name='AutoTest Airport', city='Testville', country='Testland', iata='ZZZ', icao='WSSS'");
+    $this->assertText("[name] => Changi Intl");
   }
 }
 
